--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.9.1",
+    "@react-navigation/native-stack": "^6.7.0",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
+    "react-devtools": "^4.25.0",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-web": "0.17.7"
